<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="title_activity_mortgage_calculator">Mortgage Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="mortgage_amount_label">Mortgage Amount</string>
    <string name="mortgage_amount">0.00</string>

    <string name="rate_percent_label">Interest Rate</string>
    <string name="rate_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>


    <string name="mortgage_term_label">Mortgage term</string>
    <string name="mortgage_term">0.00</string>

    <string name="total_amount_label">Monthly Payment</string>
    <string name="total_amount">$0.00</string>
</resources>